--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <div>
                 <h1 class="title-main">The</h1>
                 <h1 class="title-main">Night</h1>
-                <h1 class="title-main">Jourhey</h1>
+                <h1 class="title-main">Journey</h1>
               </div>
               <div>
                 <h1 class="text-white text-4xl">*</h1>
