--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h1 class="text-white text-4xl">*</h1>
               </div>
               <div>
-                <h2 class="title-sub">Al-'Isra' wal-Mi'raj</h2>
+                <h2 class="title-sub">al-'Isrā' wal-Mi'rāj</h2>
                 <p class="title-content">
                   Adalah bagian kedua dari perjalanan yang dilakukan oleh Nabi
                   Muhmmad S.A.W dalam waktu satu malam saja. Kerjadian ini
