--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>al-'Isrā' wal-Mi'rāj</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -16,6 +17,7 @@
         }
       }
     </style>
+ 
   </head>
   <body>
     <div class="bg-custom-green -z-50">
